# beacon

./: .gitignore  .releaserc.json  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
DOCUMENTATION/: beacon_commands.md  bot.md  checks.md  paginator.md  preconditions.md  timeparser.md  views.md
examples/: main.py
src/beacon/: __init__.py  bot.py
src/beacon/core/: beacon_commands.py  commands_registry.py  dashboard.py  errors.py  preconditions.py
src/beacon/ext/: diagnostics.py  fonts.conf  path.py  pic.py
src/beacon/utils/: __init__.py  paginator.py  views.py
src/dopamineframework/: bot.py
src/dopamineframework/core/: errors.py  preconditions.py
src/dopamineframework/ext/: diagnostics.py  pic.py
